@@ -11,8 +11,10 @@
     <input id="hidden_field_id" name="hidden_field_name" class="hidden_field_class"
             size="40" type="hidden" value="12345" />
 
+    <label for="text_area_id">Text Area</label>
     <textarea rows="2" cols="20" id="text_area_id" class="text_area_class" name="text_area_name"></textarea>
 
+    <label for="sel_list_id">Select List</label>
     <select name="sel_list_name" id="sel_list_id" class="sel_list_class">
       <option value="option1">Test 1</option>
       <option value="option2">Test 2</option>
@@ -58,6 +60,7 @@
     <label for="cb_id">Checkbox</label>
     <input id="cb_id" name="cb_name" class="cb_class" type="checkbox" value="1" />
 
+    <label for="milk_id">Radio</label>
     <input type="radio" id="milk_id" name="milk_name" class="milk_class" value="Milk"> Milk <br />
     <input type="radio" id="butter_id" name="butter_name" class="butter_class" value="Butter">Butter
 
@@ -116,6 +119,8 @@
 
     <form id="form_id" class="form_class" name="form_name" action="/">
     </form>
+
+    <label for="file_field_id">File Field</label>
     <input type="file" name="file_field_name" id="file_field_id" class="file_field_class" title="file_field_title" />
 
     <ul id="ul_id" name="ul_name" class="ul_class">
