@@ -18,6 +18,7 @@ Feature: Text Area
     | name      |
     | xpath     |
     | index     |
+    | label     |
 
   @multi
   Scenario Outline: Locating a text area using multiple parameters
